--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.1.0",
     "gulp-webserver": "^0.9.0",
+    "minimist": "^1.1.1",
     "sw-precache": "^1.2.7"
   }
 }
