--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,8 @@
       "prefix": "men",
       "schematics": {
         "@schematics/angular:component": {
-          "styleext": "scss"
+          "styleext": "scss",
+          "spec": false
         }
       },
       "architect": {
